--- a/package.json
+++ b/package.json
@@ -127,6 +127,7 @@
     "redux-epic": "^0.3.0",
     "redux-first-router": "^1.9.19",
     "redux-form": "^5.2.3",
+    "redux-logger": "^3.0.6",
     "request": "^2.65.0",
     "reselect": "^3.0.0",
     "rx": "^4.1.0",
